# DoodlerEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat
Code/Engine/: BMPImage.cpp  BMPImage.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  RenderSystem.cpp  RenderSystem.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h
Code/Engine/Entity/: Empty.cpp  Empty.h  Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  EntityFactoryManager.cpp  EntityFactoryManager.h  EntitySystem.cpp  EntitySystem.h  InteractableUIEntity.cpp  InteractableUIEntity.h
Code/Engine/EntityComponents/: AnimatorComponent.cpp  AnimatorComponent.h  ShaderComponent.cpp  ShaderComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h
Code/Engine/EntityComponents/Drawables/: CircleComponent.cpp  CircleComponent.h  RectangleComponent.cpp  RectangleComponent.h  ShaderComponent.cpp  ShaderComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h
Code/Engine/EntityComponents/Primitives/: CircleComponent.cpp  CircleComponent.h  RectangleComponent.cpp  RectangleComponent.h
Code/Engine/UI_Elements/: Button.cpp  Button.h  ButtonMenu.cpp  ButtonMenu.h  Image.cpp  Image.h  InputField.cpp  InputField.h  InputFieldValidKeys.h  Slider.cpp  Slider.h  Text.cpp  Text.h
Code/Game/: Bazooka.cpp  Bazooka.h  BazookaRocket.cpp  BazookaRocket.h  BrushTool.cpp  BrushTool.h  CreateLobbyForm.cpp  CreateLobbyForm.h  Game.cpp  GameManager.cpp  GameManager.h  LevelSelection.cpp  LevelSelection.h  Player.cpp  Player.h  World.cpp  World.h
Code/Game/MultiplayerLobbyList/: CreateLobbyForm.cpp  CreateLobbyForm.h  Lobby.h  LobbySearcher.cpp  LobbySearcher.h
Code/Game/Scenes/: LevelSelectionScene.cpp  LevelSelectionScene.h  MainMenu.cpp  MainMenu.h  MultiplayerLobbyListScene.cpp  MultiplayerLobbyListScene.h  PlayScene.cpp  PlayScene.h  WorldGenerator.cpp  WorldGenerator.h
Resources/Shaders/: World_Image.frag  World_Image.vert
Resources/UI/: UI-Elemente.pdn
Resources/bmp/DontDelete/: GroundTile-wLayers.pdn
